--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
+    "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.18.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10"
